can delete and edit an exercise in a routine

--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -15,6 +15,15 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <%= f.fields_for :exercises do |builder| %>
+  <p>
+    <%= builder.label :name, "Exercise" %><br/>
+    <%= builder.text_field :name %><br />
+    <%= builder.check_box :_destroy %>
+    <%= builder.label :_destroy, "Remove Exercise" %>
+    <% end %>
+  </p>
   <div class="actions">
     <%= f.submit %>
   </div>
