starting to autofill form

--- a/app/views/routines/_exercise_fields.html.erb
+++ b/app/views/routines/_exercise_fields.html.erb
@@ -1,6 +1,8 @@
 <p class="fields">
   <%= f.label :name, "Exercise" %><br/>
   <%= f.text_field :name %><br />
-  <%= f.check_box :_destroy %>
+  <%= f.text_field :exercise_name %>
   <%= f.label :_destroy, "Remove Exercise" %>
 </p>
+
+<!-- check_box :_destroy -->
