fixed changed to delete exercises in routine

--- a/app/views/routines/_exercise_fields.html.erb
+++ b/app/views/routines/_exercise_fields.html.erb
@@ -1,8 +1,10 @@
 <p class="fields">
   <%= f.label :name, "Exercise" %><br/>
   <%= f.text_field :name %><br />
-  <%= f.text_field :exercise_name %>
+  <%= f.check_box :_destroy %>
   <%= f.label :_destroy, "Remove Exercise" %>
 </p>
 
 <!-- check_box :_destroy -->
+
+<!-- f.text_field :exercise_name -->
