starting to fix form

--- a/app/views/routines/_exercise_fields.html.erb
+++ b/app/views/routines/_exercise_fields.html.erb
@@ -5,6 +5,11 @@
   <%= f.label :_destroy, "Remove Exercise" %>
 </p>
 
-<!-- check_box :_destroy -->
+   <!-- f.label :name, "Exercise" <br/>
+   f.text_field :name <br />
+   f.hidden_field :_destroy 
+   link_to_function "remove", "remove_fields(this)" 
 
-<!-- f.text_field :exercise_name -->
+ -->
+
+<!--  routine[][exercises][name] -->
