--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -4,11 +4,11 @@
   <%= label_tag "routine[name]", "Routine Name" %>
   <%= text_field_tag "routine[name]" %><br />
 
-  <% 5.times do %>
+  <% 2.times do %>
     <%= label_tag "routine[exercises][][name]", "Exercise Name" %>
     <%= text_field_tag "routine[exercises][][name]" %><br />
 
-    <% 3.times do %>
+    <% 2.times do %>
       <%= label_tag "routine[exercises][][infos][repetition]", "Repetitions" %>
       <%= text_field_tag "routine[exercises][][infos][repetition]" %>
 
@@ -19,6 +19,30 @@
   <% end %>
 
 <%= submit_tag "Submit Routine" %>
+
+<!--  "routine"=>
+  {
+    "name"=>"Test Routine",
+    "exercises"=>
+      [
+        {
+          "name"=>"Squat",
+          "infos"=>
+            {
+              "repetition"=>"10",
+              "weight"=>"405"
+            }
+        },
+          {
+            "name"=>"Dips",
+            "infos"=>
+              {
+                "repetition"=>"20",
+                "weight"=>"45"
+              }
+            }
+      ]
+  } -->
 
 
 
