--- a/app/views/routines/test_params.html.erb
+++ b/app/views/routines/test_params.html.erb
@@ -76,6 +76,28 @@ each sets for lift
 
 <%= submit_tag "Submit Routine" %>
 
+{"routine"=>{
+  "name"=>"Test Routine"},
+  "lifts"=>[
+    {
+      "1"=>{
+        "exercise_id"=>"4",
+        "infos"=>[
+          {"weight"=>"111", "repetition"=>"1"},
+          {"weight"=>"222", "repetition"=>"2"}]},
+ 
+      "2"=>{
+        "exercise_id"=>"10",
+        "infos"=>[
+          {"weight"=>"333", "repetition"=>"3"},
+          {"weight"=>"444", "repetition"=>"4"}
+                  ]
+            }
+    }
+          ]
+}
+
+
 
 
 
