can have more than one set but its hard coded

--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -13,6 +13,18 @@
       
       <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
       <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
+
+      <%= label_tag "[lifts][][#{n}][infos][][weight]", "weight" %>
+      <%= text_field_tag "[lifts][][#{n}][infos][][weight]" %>
+      
+      <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
+      <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
+
+      <%= label_tag "[lifts][][#{n}][infos][][weight]", "weight" %>
+      <%= text_field_tag "[lifts][][#{n}][infos][][weight]" %>
+      
+      <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
+      <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
     <% end %>
 
  
