--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <head>
   <title>Workout</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
+    <%#= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
     <%= javascript_include_tag "application" %>
-    <%= javascript_include_tag "http://code.jquery.com/jquery-1.9.1.js" %>
-    <%= javascript_include_tag "http://code.jquery.com/ui/1.10.3/jquery-ui.js" %>
+    <%#= javascript_include_tag "http://code.jquery.com/jquery-1.9.1.js" %>
+    <%#= javascript_include_tag "http://code.jquery.com/ui/1.10.3/jquery-ui.js" %>
     <%= csrf_meta_tags %>
 </head>
 <body>
