--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -1,70 +1,56 @@
+####################################
 
 <%= form_tag routines_path %>
 
   <%= label_tag "routine[name]", "Routine Name" %>
   <%= text_field_tag "routine[name]" %><br />
 
-  <%= label_tag "routine[date]", "Date" %>
-  <%= text_field_tag "routine[date]", nil, id: "date" %><br />
 
-    <% 1.times do |n| %>
-      
-      <div class="ui-widget">
-        <%= text_field_tag "[lifts][][#{n}][exercise_id]", nil, :placeholder => "Choose Exercise", id: "exercise" %>
-      </div>
-    <%#= select("[lifts][][#{n}]", "exercise_id", Exercise.all.collect {|p| [ p.name, p.id] }) %><br />
-    
-      <%= label_tag "[lifts][][#{n}][infos][][weight]", "weight" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][weight]" %>
-      
-      <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
+  
+      <fieldset id="exercises">
+        <div class="exercise">
+          <div class="ui-widget">
+            <%= text_field_tag "[lifts][][0][exercise_id]", nil, :placeholder => "Choose Exercise", class: "ex" %>
+          </div>
+          <button class="remove">remove exercise</button>
+        </div>
+      </fieldset>
 
-      <%= label_tag "[lifts][][#{n}][infos][][weight]", "weight" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][weight]" %>
-      
-      <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
+      <button id="add_exercise">add exercise</button>
+  
 
-      <%= label_tag "[lifts][][#{n}][infos][][weight]", "weight" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][weight]" %>
-      
-      <%= label_tag "[lifts][][#{n}][infos][][repetition]", "reps" %>
-      <%= text_field_tag "[lifts][][#{n}][infos][][repetition]" %><br />
-    <% end %>
-
- 
- 
   
 <%= submit_tag "Submit Routine" %>
 
 <script>
+var n = 0;
 
-$(function() {
-    $( "#date" ).datepicker({
-      dateFormat: 'yy-mm-dd'
-    }); 
-    
+var exercises = $('#exercises').html();
+
+$('#add_exercise').on('click', function() { 
+  
+  n+=1;  
+  console.log(exercises);
+
+  exercises = $(exercises).find('.ex').attr('name', '[lifts][]['+n+'][exercise_id]').parents('.exercise');
+
+  $('#exercises').append(exercises); 
+  return false; //prevent form submission
+});
+
+$('#exercises').on('click', '.remove', function() {
+    $(this).parent().remove();
+    return false; //prevent form submission
+});
+
 var availableExercises = [
       <% Exercise.all.each do |exercise| %>
       '<%= exercise.name %>',
       <% end %>
     ];
 
-$("#exercise").autocomplete({
-      source: availableExercises
-    });
+$('#exercises').on('keydown.autocomplete', '.ex', function() {
+  $(this).autocomplete({source: availableExercises});
+});
 
-  });
 </script>
-
-
-
-
-
-
-
-
-
-
-
