--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" %> 
     <%= stylesheet_link_tag "//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" %>
     <%#= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
+     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <%= javascript_include_tag "application" %>
     <%#= javascript_include_tag "http://code.jquery.com/jquery-1.9.1.js" %>
     <%#= javascript_include_tag "http://code.jquery.com/ui/1.10.3/jquery-ui.js" %>
