--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -22,13 +22,7 @@
 
   <div id="chart_div" style="width: 900px; height: 500px;"></div>
 
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
-    <script>
-      window.graph = <%= raw @graph %>;
-    </script>
-
-    <script src="/assets/routines.js"></script>
+  <script>window.graph = <%= raw @graph %>;</script>
 
 ###################################
 <br />
