can see total weight over time per exercise

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,20 +7,14 @@
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
       function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Year', 'Sales', 'Expenses'],
-          ['2004',  1000,      400],
-          ['2005',  1170,      460],
-          ['2006',  660,       1120],
-          ['2007',  1030,      540]
-        ]);
+        var data = google.visualization.arrayToDataTable(<%= raw @total_graph %>);
 
         var options = {
           title: 'Total Weight Over Time'
         };
 
         var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-        chart.draw(data, {title: "Squats", width: 800, height: 600, 
+        chart.draw(data, {title: "DB Reverse Flys", width: 800, height: 600, 
                           vAxis: {title: "Total Weight"},
                           hAxis: {title: "Date"}});
       }
