--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,21 +7,25 @@
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
       function drawChart() {
-        var data = google.visualization.arrayToDataTable(<%= raw @total_graph %>);
+        var dataTable = new google.visualization.DataTable();
+        dataTable.addColumn('string', 'Year');
+        dataTable.addColumn('number', 'Sales');
+        // A column for custom tooltip content
+        dataTable.addColumn({type: 'string', role: 'tooltip'});
+        dataTable.addRows([
+          ['2010', 600, '$600K in our first year!'],
+          ['2011', 1500, 'Sunspot activity made this our best year ever!'],
+          ['2012', 800, '$800K in 2012.'],
+          ['2013', 1000, '$1M in sales last year.']
+      ]);
 
-        var options = {
-          title: 'Total Weight Over Time'
-        };
-
-        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-        chart.draw(data, {title: "DB Reverse Flys", width: 800, height: 600, 
-                          vAxis: {title: "Total Weight"},
-                          hAxis: {title: "Date"}});
-      }
+      var options = { legend: 'none' };
+      var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+      chart.draw(dataTable, options);
+}
     </script>
   </head>
   <body>
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
-
