--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,18 @@
         dataTable.addColumn('string', 'Year');
         dataTable.addColumn('number', 'Sales');
         // A column for custom tooltip content
-        dataTable.addColumn({type: 'string', role: 'tooltip'});
+        dataTable.addColumn({type: 'string', role: 'tooltip', 'p': {'html': true}});
         dataTable.addRows([
-          ['2010', 600, '$600K in our first year!'],
-          ['2011', 1500, 'Sunspot activity made this our best year ever!'],
+          ['2010', 600, '$600K <em>in</em> our first year!'],
+          ['2011', 1500, 'Sunspot activity made <em>this</em> our best year ever!'],
           ['2012', 800, '$800K in 2012.'],
           ['2013', 1000, '$1M in sales last year.']
       ]);
 
-      var options = { legend: 'none' };
+      var options = { tooltip: 
+                    {isHhml: true},
+                    focusTarget: 'category', 
+                    legend: 'none' };
       var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
       chart.draw(dataTable, options);
 }
