added bodyweight to form and show

--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -6,6 +6,9 @@
   <%= label_tag "routine[date]", "Date" %>
   <%= text_field_tag "routine[date]", nil, id: "date" %><br />
 
+  <%= label_tag "routine[bodyweight]", "Bodyweight" %>
+  <%= text_field_tag "routine[bodyweight]" %><br />
+
   
       <fieldset id="exercises">
         <div class="exercise">
