--- a/app/views/routines/show.html.erb
+++ b/app/views/routines/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <b>Name:</b>
   <%= @routine.user.name %><br />
+  <%= @routine.bodyweight %><br />
   <%= @routine.name %><br />
   <%= @routine.date %>
 </p>
