--- a/app/views/routines/_form.html.erb
+++ b/app/views/routines/_form.html.erb
@@ -14,7 +14,7 @@
         <div class="exercise">
           <div class="ui-widget">
             <input data-n="0" type="text" name="[lifts][][0][exercise_name]" placeholder="Choose Exercise" class="ex">
-            <input type="checkbox" name="[lifts][][0][bodyweight_exercise]" value="yes">Bodyweight Exercise?<br>
+            <!-- <input type="checkbox" name="[lifts][][0][bodyweight_exercise]" value="yes">Bodyweight Exercise?<br> -->
             <button class="remove_exercise">x</button>
           </div>
           <span class="infos">
