gave chart titles on user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,9 +16,11 @@
           ["2013-08-11", 2160, "8 reps at 45 pounds, 8 reps at 90 pounds, 8 reps at 135 pounds"], ["2013-08-12", 3160, "8 reps at 45 pounds, 8 reps at 90 pounds, 8 reps at 135 pounds"]  
       ]);
 
-      var options = { tooltip: 
+      var options = {tooltip: 
                     {isHhml: true}, 
-                    legend: 'none' };
+                    title: 'Your Exercise', 
+                    hAxis: {title: 'Date'},
+                    vAxis: {title: 'Total Weight (pounds)'} };
       var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
       chart.draw(dataTable, options);
 }
@@ -28,3 +30,4 @@
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
+
